tests/success/for_iter_scope_leak.bz
function main()
{
	let i = 0i32;
	for (let i = 0u32; false;)
	{
		static_assert(typeof i == u32);
	}
	static_assert(typeof i == i32);
}
