tests/error/local_move_variable_type.bz
function test()
{
	let _: move int32 = 0i32;
}
